# install_name_tool

./: CMakeLists.txt  README.md
src/: check1.ref  check2.ref  install_name_tool.c  install_name_tool.cpp  patchelf.cpp  test.cpp
